--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,26 @@ build/
 pids
 logs
 .idea/
+contracts/.prettierrc
 contracts/flattened/*.sol
-contracts/artifacts/*.json
+contracts/artifacts
 .DS_Store
 coverage/
 coverage.json
 coverage.js
+abi/Address.abi
 abi/BytesLib.abi
 abi/BytesToTypes.abi
+abi/BitcoinHelper.abi
 abi/I*.abi
 abi/Memory.abi
 abi/Ownable.abi
+abi/ReentrancyGuard.abi
 abi/RLP*.abi
+abi/SafeCast.abi
 abi/SafeMath.abi
 abi/System.abi
+abi/TypedMemView.abi
 
 # test
 .pytest_cache
