--- a/contracts/BtcLightClient.template
+++ b/contracts/BtcLightClient.template
@@ -3,6 +3,7 @@ pragma solidity 0.8.4;
 
 import "./lib/Memory.sol";
 import "./lib/BytesToTypes.sol";
+import "./lib/SatoshiPlusHelper.sol";
 import "./interface/ILightClient.sol";
 import "./interface/ICandidateHub.sol";
 import "./interface/ISystemReward.sol";
@@ -41,7 +42,6 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
   uint256 public constant ROUND_SIZE=100;
   uint256 public constant MAXIMUM_WEIGHT=20;
   uint256 public constant CONFIRM_BLOCK = 6;
-  uint256 public constant INIT_ROUND_INTERVAL = {{initRoundInterval}};
   uint256 public constant POWER_ROUND_GAP = 7;
   uint256 public constant INIT_STORE_BLOCK_GAS_PRICE = 35e9;
 
@@ -51,6 +51,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
   uint256 public maxWeight;
   uint256 public countInRound=0;
   uint256 public collectedRewardForHeaderRelayer=0;
+  // Expire
   uint256 public roundInterval;
 
   address payable[] public headerRelayerAddressRecord;
@@ -108,7 +109,6 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
     callerCompensationMolecule=CALLER_COMPENSATION_MOLECULE;
     roundSize = ROUND_SIZE;
     maxWeight = MAXIMUM_WEIGHT;
-    roundInterval = INIT_ROUND_INTERVAL;
     storeBlockGasPrice = INIT_STORE_BLOCK_GAS_PRICE;
     alreadyInit = true;
   }
@@ -203,7 +203,7 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
       blockHash = getPrevHash(blockHash);
     }
 
-    uint256 blockRoundTag = getTimestamp(blockHash) / roundInterval;
+    uint256 blockRoundTag = getTimestamp(blockHash) / SatoshiPlusHelper.ROUND_INTERVAL;
     address candidate = getCandidate(blockHash);
     
     // The mining power with rounds less than or equal to frozenRoundTag has been frozen 
@@ -649,15 +649,16 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
   /// @param roundTimeTag The specific round time
   /// @param candidates The given candidates to get their powers
   /// @return powers The corresponding powers of given candidates
-  function getRoundPowers(uint256 roundTimeTag, address[] calldata candidates) external override view returns (uint256[] memory powers) {
+  function getRoundPowers(uint256 roundTimeTag, address[] calldata candidates) external override view returns (uint256[] memory powers, uint256 totalPower) {
     uint256 count = candidates.length;
     powers = new uint256[](count);
 
     RoundPower storage r = roundPowerMap[roundTimeTag];
     for (uint256 i = 0; i < count; ++i){
       powers[i] = r.powerMap[candidates[i]].miners.length;
+      totalPower += powers[i];
     }
-    return powers;
+    return (powers, totalPower);
   }
 
   /// Get miners (in the form of reward addresses) who delegated to a given candidate in a specific round
