--- a/contracts/BtcLightClient.template
+++ b/contracts/BtcLightClient.template
@@ -153,9 +153,6 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
     uint32 adjustment = blockHeight / DIFFICULTY_ADJUSTMENT_INTERVAL;
     // save & update rewards
     blockChain[blockHash] = encode(headerBytes, rewardAddr, scoreBlock, blockHeight, adjustment, candidateAddr);
-    if (blockHeight % DIFFICULTY_ADJUSTMENT_INTERVAL == 0) {
-      adjustmentHashes[adjustment] = blockHash;
-    }
     submitters[blockHash] = payable(msg.sender);
 
     collectedRewardForHeaderRelayer += rewardForSyncHeader;
@@ -181,6 +178,9 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
       bytes32 prevHash = getPrevHash(blockHash);
       while(height2HashMap[prevHeight] != prevHash && prevHeight + CONFIRM_BLOCK >= blockHeight) {
         height2HashMap[prevHeight] = prevHash;
+        if (prevHeight % DIFFICULTY_ADJUSTMENT_INTERVAL == 0) {
+          adjustmentHashes[adjustment] = prevHash;
+        }
         --prevHeight;
         prevHash = getPrevHash(prevHash);
       }
@@ -188,10 +188,16 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
       if (blockHeight > getHeight(heaviestBlock)) {
         addMinerPower(blockHash);
       }
+
+      if (blockHeight % DIFFICULTY_ADJUSTMENT_INTERVAL == 0) {
+        adjustmentHashes[adjustment] = blockHash;
+      }
+
       heaviestBlock = blockHash;
       highScore = scoreBlock;
       height2HashMap[blockHeight] = blockHash;
     }
+    
     emit StoreHeader(blockHash, candidateAddr, rewardAddr, blockHeight, bindingHash);
   }
 
@@ -406,12 +412,13 @@ contract BtcLightClient is ILightClient, System, IParamSubscriber{
 
     // Check proof of work matches claimed amount
     // we do not do other validation (eg timestamp) to save gas
-    if (blockHash == 0 || uint256(blockHash) >= target) {
+    if (blockHash == 0 || uint256(blockHash) > target) {
       return (blockHeight, scoreBlock, ERR_PROOF_OF_WORK);
     }
     blockHeight = 1 + getHeight(hashPrevBlock);
     uint32 prevBits = getBits(hashPrevBlock);
-    if (blockHeight % DIFFICULTY_ADJUSTMENT_INTERVAL != 0) {// since blockHeight is 1 more than blockNumber; OR clause is special case for 1st header
+    if (blockHeight % DIFFICULTY_ADJUSTMENT_INTERVAL != 0) {
+      // since blockHeight is 1 more than blockNumber; OR clause is special case for 1st header
       /* we need to check prevBits isn't 0 otherwise the 1st header
        * will always be rejected (since prevBits doesn't exist for the initial parent)
        * This allows blocks with arbitrary difficulty from being added to
