--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,3 +58,4 @@ jobs:
           brownie pm install OpenZeppelin/openzeppelin-contracts@4.9.6
           sh generate-test-contracts.sh
           brownie test -v --stateful false
+          node generate-genesis.js
