--- a/contracts/System.template
+++ b/contracts/System.template
@@ -27,6 +27,7 @@ contract System {
   address public CORE_AGENT_ADDR;
   address public HASH_AGENT_ADDR;
   address public BTCLST_TOKEN_ADDR;
+  address public CONFIGURATION_ADDR;
 
   struct SystemContractAddr {
     address validator;
@@ -46,6 +47,7 @@ contract System {
     address coreAgent;
     address hashAgent;
     address btcLstToken;
+    address configurationContract;
   }
 
   function updateContractAddr(bytes memory _systemContractAddr) external {
@@ -67,6 +69,7 @@ contract System {
     CORE_AGENT_ADDR = systemContractAddr.coreAgent;
     HASH_AGENT_ADDR = systemContractAddr.hashAgent;
     BTCLST_TOKEN_ADDR = systemContractAddr.btcLstToken;
+    CONFIGURATION_ADDR = systemContractAddr.configurationContract;
   }
   
   function setAlreadyInit(bool value) external {
@@ -91,6 +94,7 @@ contract System {
   address public constant BTC_AGENT_ADDR = 0x0000000000000000000000000000000000001013;
   address public constant BTC_STAKE_ADDR = 0x0000000000000000000000000000000000001014;
   address public constant BTCLST_STAKE_ADDR = 0x0000000000000000000000000000000000001015;
+  address public constant CONFIGURATION_ADDR = 0x0000000000000000000000000000000000001016;
   address public constant BTCLST_TOKEN_ADDR = 0x0000000000000000000000000000000000010001;
 {% endif %}
   modifier onlyCoinbase() {
